# cliptrans

./: .env.example  .gitignore  LICENSE  README.rst  cliptrans.toml  glossary.toml  pyproject.toml
.github/workflows/: ci.yml
src/cliptrans/: __main__.py  config.py  di.py  timeline_io.py
src/cliptrans/adapters/: ffmpeg.py  holodex.py  live_chat_fetcher.py  subtitle_fetcher.py  ytdlp.py
src/cliptrans/adapters/asr/: faster_whisper.py
src/cliptrans/adapters/exporters/: _utils.py  ass.py  preview.py  srt.py  vtt.py
src/cliptrans/adapters/llm/: clip_finder_agent.py  translation_agent.py
src/cliptrans/adapters/persistence/: clip_repository.py  database.py  repository.py  tables.py
src/cliptrans/application/ports/: clip_repository.py  downloader.py  exporter.py  holodex.py  media.py  repository.py  subtitle_fetcher.py  transcriber.py  translator.py
src/cliptrans/application/services/: chat_analyzer.py  clip_finder.py  clip_manager.py  export.py  ingest.py  pipeline.py  prepare.py  regroup.py  stream_browser.py  transcribe.py  translate.py
src/cliptrans/domain/: enums.py  errors.py  models.py
src/cliptrans/entrypoints/api/: app.py  deps.py  i18n.py
src/cliptrans/entrypoints/api/routes/: clips.py  pages.py  streams.py
src/cliptrans/entrypoints/api/static/: app.css  app.js
src/cliptrans/entrypoints/api/templates/: _approve_candidate_result.html  _candidate_card.html  _candidates_fragment.html  base.html  (+7 more)
src/cliptrans/entrypoints/cli/: app.py
tests/: conftest.py  test_api_clips.py  test_api_i18n.py  test_clip_finder_agent.py  test_database.py  test_domain_models.py  test_exporters.py  test_regroup.py  test_repository.py  test_timeline_io.py  test_translation_agent.py
tests/e2e/: conftest.py  fixtures.py  test_selections_page.py  test_stream_detail.py  test_streams_page.py
