[project]
name = "cliptrans"
version = "0.1.0"
description = "翻訳付き切り抜き動画制作ツール"
readme = "README.rst"
license-expression = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Gakuto Furuya", email = "g.furuya@gaato.net" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "yt-dlp>=2026.3.17",
    "faster-whisper>=1.1.1",
    "pydantic-ai>=0.2",
    "typer>=0.15",
    "rich>=14.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "tenacity>=9.0",
    "structlog>=25.1",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cuda-runtime-cu12>=12.9",
    "nvidia-cublas-cu12>=12.9",
    "nvidia-cudnn-cu12>=9.20",
]
whisperx = ["whisperx>=3.7.2"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
]

[project.scripts]
cliptrans = "cliptrans.entrypoints.cli.app:cli_app"
cliptrans-web = "cliptrans.entrypoints.api.app:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "pytest-cov>=6.1",
    "pytest-playwright>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "gpu: tests that require a CUDA GPU",
    "slow: slow tests (network, long-running)",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
addopts = "-m 'not e2e'"

[tool.ty.environment]
python-version = "3.14"
